--- a/.eslintrc
+++ b/.eslintrc
@@ -194,7 +194,7 @@
 		"func-style": [2, "declaration"],                  												// enforces use of function declarations or expressions (off by default)
 //		"id-length": [2, {"min": 2, "max": 20, "properties": "never", "exceptions": ["i","j","k"]}], 	//this//option//enforces minimum and maximum identifier lengths (variable names, property names etc.)
 		"id-match": 0,					  																// require identifiers to match the provided regular expression
-		"indent": [2, "tab",{"VariableDeclarator": 1}],   												// this //option sets a specific tab width for //your code (off by default)
+//		"indent": [2, "tab",{"VariableDeclarator": 2}],													//this//option sets a specific tab width for //your code (off by default)
 		"jsx-quotes": [2,"prefer-single"],	  															// specify whether double or single quotes should be used in JSX//attributes
 		"key-spacing": [2, {"beforeColon": false, "afterColon": true}],    								// enforces spacing between keys and values in object literal properties
 		"linebreak-style": 0,             																// disallow mixed 'LF' and 'CRLF' as linebreaks (off by default)
